refactor: update map reports
- Add new types of reports,  and remove a few old ones
