# src/models/mapReports.ts
@@ -5,12 +5,12 @@ export type postMapReport = typeof mapReports.$inferInsert;
 export interface postMapReportRequest {
     userId: string | null,
     poiId: string | null,
-    reportType: 'blocked_crosswalk'|'pothole' | 'broken_elevator' | 'fallen_tree' | 'inaccessible_entrance' | 'irregular_surface' | 'sidewalk_surface' | 'other',
-    geomType: 'point' | 'line',
+    buildingId: string | null,
+    reportType: 'pothole' | 'irregular_surface' | 'narrow_sidewalk' | 'inaccessible_entrance' | 'inaccessible_floor' | 'broken_elevator' | 'inaccessible_bathroom' | 'other',
+    severity: 'moderate' | 'severe' | null,
     lat: number,
     lon: number,
-    geometryJson: string | null,
     detailsJson: string | null,
+    description: string | null,
     image?: File | null
 }
-
